--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
     margin: 0;
 }
 
-
 :root {
     --red: #f01a0b;
     --white: #fff;
@@ -12,31 +11,32 @@
     --pink: #eea0a0;
 }
 
-
-body {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+/* body */
+.cuerpo {
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     margin: 0;
     height: 100vh;
     background-color: var(--pink);
 }
 
-.dark{
+.oscuro {
     background-color: var(--red);
 }
 
-
-header{
+/* header */
+header {
     position: fixed;
+    top: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     color: rgb(14, 13, 13);
     font-size: 18px;
-    height: 6rem;
-    width: 100vw;
-    padding: 10px;
     line-height: 0px;
     background-image: url("imagenes/imagen-tarea.jpg");
     background-repeat: no-repeat;
@@ -44,9 +44,10 @@ header{
     background-size: cover;
     background-size: 100% 100%;
     opacity: 0.8;
+    padding: 2px 0;
+    width: 100%;
+    z-index: 1;
 }
-
-
 
 h1 {
     margin-top: 25px;
@@ -66,152 +67,37 @@ h1 {
     font-size: 10px;
     margin-top: 35px;
 }
+/* Fin del header */
 
-.section-create{
+/* main */
+main {
     display: flex;
     justify-content: center;
     text-align: center;
-    flex-wrap: wrap;
-    padding-top: 120px;
-    position: fixed;
-}
-
-#btn-filterPendient,
-#btn-filterInProgress,
-#btn-filterFinish,
-#btn-all{
-    cursor: pointer;
-    display: flex;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 12px;
-    color: rgb(255, 255, 255);
-    text-align: left;
-    text-decoration-color: rgb(255, 255, 255);
-    text-decoration-line: none;
-    text-decoration-style: solid;
-    background-color: var(--red);
-    border-radius: 100px;
-    border: none;
-    box-sizing: border-box;
-    line-height: 20px;
-    list-style-image: none;
-    list-style-position: outside;
-    list-style-type: none;
-    padding-bottom: 0px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 0px;
-    height: auto;
-    margin-top: 10px;
-    margin-right: 10px;
-}
-
-
-#open, 
-#close {
-   border-radius: 5px;
-   border: none;
-   background-color: var(--black);
-   color: white;
-   padding-right: 10px;
-   
-
-}
-
-
-
-/* Lista de tareas */
-section{
-    display: flex;
-    justify-content:center;
-    text-align: center;
     padding: 10px 60px 200px;
+    margin-top: 8rem; /* Para que el contenido no se superponga con el header */
 }
 
-
-*:first-letter {
-    text-transform: capitalize;
-}
-
-.roundBorder {
-    border-radius: 5px;
-}
-
-.list {
+.contenedor {
     margin: 100px auto;
     padding: 25px;
     background-color: var(--white);
-    width: 150%;
+    width: 100%; /* Cambiado a 100% */
     max-width: 450px;
     background-image: url("imagenes/imagen-tarea.jpg");
-
 }
-
-.date {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.dateRight {
-    display: flex;
-    align-items: center;
-}
-
-#dateNumber {
-    font-size: 50px;
-}
-
-#dateText {
-    letter-spacing: 3px;
-    text-transform: uppercase;
-}
-
-#dateMonth,
-#dateNumber,
-#dateText  {
-    font-weight: bold;
-}
-
-#dateMonth,
-#dateYear {
-    margin-left: 7px;
-    font-size: 20px;
-}
-
-/* form {
-    margin: 20px 0;
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: auto 35px auto;
-    grid-column-gap: 15px;
-}
-
-input {
-    border: none;
-    padding-left: 10px;
-    background-color: var(--diabled);
-}
-
-input:focus {
-    outline: none;
-}
-
-
-/*AGREGAR TAREA*/
 
 .agregar-tarea {
-    background-color: var(--white) ;
+    background-color: var(--white);
     border-radius: 15px;
     height: 70px;
     display: flex;
     align-items: center;
-    gap: 70px;
+    gap: 15px; /* Ajustado para no desbordar */
     padding: 10px;
     margin: 40px 0;
     display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: auto 35px auto;
+    grid-template-columns: 1fr auto auto; /* Cambiado a columnas fraccionales */
     grid-column-gap: 15px;
 }
 
@@ -224,35 +110,22 @@ input:focus {
     padding-left: 10px;
 }
 
-
 .agregar-tarea input::placeholder {
-   font-size: 1rem;
-   color: var(--black);
+    font-size: 1rem;
+    color: var(--black);
 }
 
-
-.orderButton {
-    border: none;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-
-
-.agregar-tarea i{
-    font-size: 50px;
+.agregar-tarea button {
+    font-size: 30px; 
     color: var(--red);
-
-}
-.agregar-tarea i:hover {
-    transform: scale(1.1);
+    background: none; 
+    border: none; 
     cursor: pointer;
 }
-
-
-
-/*SECCION DE TAREA */
-
+.agregar-tarea button:hover {
+    transform: scale(1.1);
+    color: var(--black); 
+}
 
 .seccion-tarea li {
     display: flex;
@@ -263,46 +136,150 @@ input:focus {
     padding: 10px;
     color: var(--white);
     margin: 5px 0;
-
+    width: calc(100% - 20px);
+    grid-template-columns: auto 50px; 
+    gap: 10px; 
 }
+
+.seccion-tarea li p.texto {
+    font-size: 1rem; 
+    overflow-wrap: break-word; 
+    grid-column: 1 / -1; 
+}
+
+.seccion-tarea li .eliminar,
+.seccion-tarea li .editar {
+    justify-self: end; 
+}
+
 .seccion-tarea i {
     font-size: 25px;
 }
 
 .seccion-tarea > ul p {
     font-size: 1.2rem;
-
 }
-
 
 .seccion-tarea i:hover {
     color: var(--black);
     cursor: pointer;
 }
 
-.line-through{
+.line-through {
     text-decoration: line-through;
-    color : var(--black);
+    color: var(--black);
 }
 
 .show {
     pointer-events: auto;
     opacity: 1;
 }
+/* Fin del main */
+
+/* Modal*/
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.contenido-modal {
+    background-color: var(--white);
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid var(--black);
+    border-radius: 10px;
+    max-width: 400px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+}
+
+.cerrar {
+    color: var(--black);
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.cerrar:hover,
+.cerrar:focus {
+    color: var(--red);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.contenido-modal h2 {
+    margin-bottom: 15px;
+}
+
+.contenido-modal label {
+    display: block;
+    margin: 10px 0 5px;
+}
+
+.contenido-modal input,
+.contenido-modal select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid var(--black);
+    border-radius: 5px;
+    background-color: var(--white);
+}
+
+.contenido-modal button {
+    background-color: var(--red);
+    color: var(--white);
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.contenido-modal button:hover {
+    background-color: var(--black);
+}
+/* Fin del modal */
+
+
+/* Iconos de estado de las tareas */
+.estado i {
+    font-size: 20px;
+    color: var(--white);
+    margin-left: 10px;
+}
+
+.estado .fa-hourglass-start {
+    color: rgb(255, 115, 0);
+}
+
+.estado .fa-spinner {
+    color: yellow;
+}
+
+.estado .fa-check-circle {
+    color: green;
+}
+/* Fin de iconos de estado de las tareas */
 
 /* Responsive */
-
 @media (min-width: 1200px) {
     header {
-      display: flex;
+        display: flex;
     }
-  }
-  
-  @media (max-width: 600px) {
-    h1{
-      font-size: 26px;
-    } 
+}
+@media (max-width: 600px) {
+    h1 {
+        font-size: 26px;
+    }
+
     header {
-      width: 100%;
+        width: 100%;
     }
-  }
+}
